[package]
name          = "account-asym-totp"
description   = "An abstract account that utilizes an asymmetric time-based one-time password"
version       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
abstract-account = { path = "../../packages/abstract-account" }
account-base     = { path = "../base", features = ["library"] }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw2              = { workspace = true }
cw-storage-plus  = { workspace = true }
thiserror        = { workspace = true }
