[package]
name          = "account-granter"
description   = "An abstract account that can grant other accounts the ability to send txs on its behalf"
version       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
absacc           = { path = "../../packages/absacc" }
account-base     = { path = "../base", features = ["library"] }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw2              = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-utils         = { workspace = true }
thiserror        = { workspace = true }
